# sim-runtime

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml
crates/sim-incremental-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-incremental-core/src/: budget.rs  engine.rs  error.rs  fingerprint.rs  lib.rs  observation.rs  query.rs  snapshot.rs  state.rs  tests.rs
crates/sim-lib-binding/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-binding/recipes/: book.toml
crates/sim-lib-binding/src/: cell.rs  claims.rs  dynamic.rs  let_form.rs  lexical.rs  lib.rs  modes.rs  runtime.rs  tests.rs
crates/sim-lib-control/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-control/recipes/: book.toml
crates/sim-lib-control/src/: async.rs  backtrack.rs  claims.rs  close.rs  condition.rs  conditional.rs  coroutine.rs  derivation_tests.rs  frame_tests.rs  generator.rs  lib.rs  model.rs  nonlocal.rs  ops.rs  policy.rs  prompt.rs  protected.rs  restart.rs  runtime.rs  tests.rs
crates/sim-lib-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-core/recipes/: book.toml
crates/sim-lib-core/src/: lib.rs  read_eval.rs  surface.rs
crates/sim-lib-dispatch/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-dispatch/recipes/: book.toml
crates/sim-lib-dispatch/src/: claims.rs  generic.rs  lib.rs  metaobject.rs  method.rs  runtime.rs  tests.rs
crates/sim-lib-exec/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-exec/recipes/: book.toml
crates/sim-lib-exec/src/: exec.rs  lib.rs  tests.rs
crates/sim-lib-incremental/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-incremental/recipes/: book.toml
crates/sim-lib-incremental/src/: cap.rs  claims.rs  lib.rs  model.rs  runtime.rs  shapes.rs  tests.rs
crates/sim-lib-lang-cl/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-cl/recipes/: book.toml
crates/sim-lib-lang-cl/src/: codec.rs  conformance.rs  forms.rs  lib.rs  lowering.rs  lowering_tests.rs  matrix_row.rs  profile.rs  reader.rs  runtime.rs  symbols.rs  tests.rs
crates/sim-lib-lang-clojure/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-clojure/recipes/: book.toml
crates/sim-lib-lang-clojure/src/: codec.rs  conformance.rs  data.rs  lib.rs  matrix_row.rs  profile.rs  reader.rs  recur.rs  symbols.rs  tests.rs
crates/sim-lib-lang-genconf/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-genconf/recipes/: book.toml
crates/sim-lib-lang-genconf/src/: anchor.rs  coverage.rs  lib.rs  property.rs  publish.rs  registry.rs  seed.rs  space.rs
crates/sim-lib-lang-islisp/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-islisp/recipes/: book.toml
crates/sim-lib-lang-islisp/src/: conformance.rs  forms.rs  generic.rs  lib.rs  matrix_row.rs  profile.rs  symbols.rs  tests.rs
crates/sim-lib-lang-julia/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-julia/recipes/: book.toml
crates/sim-lib-lang-julia/src/: conformance.rs  generic.rs  lib.rs  matrix_row.rs  profile.rs  symbols.rs  tests.rs
crates/sim-lib-lang-lua/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-lua/recipes/: book.toml
crates/sim-lib-lang-lua/src/: call.rs  closure.rs  codec_normalize.rs  conformance.rs  env.rs  eval.rs  forms.rs  lib.rs  load.rs  loops.rs  lua3_12_tests.rs  lua3_13_tests.rs  lua3_14_tests.rs  matrix_row.rs  metatable.rs  number.rs  operator.rs  pattern_replace.rs  profile.rs  runtime.rs  stdlib_base.rs  stdlib_coroutine.rs  stdlib_debug.rs  stdlib_io.rs  stdlib_math.rs  stdlib_os.rs  stdlib_package.rs  stdlib_string.rs  stdlib_string_format.rs  stdlib_string_pattern.rs  stdlib_table.rs  stdlib_utf8.rs  symbols.rs  table.rs  tests.rs  value.rs
crates/sim-lib-lang-matrix/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-matrix/recipes/: book.toml
crates/sim-lib-lang-matrix/src/: closure_tests.rs  lib.rs  tests.rs
crates/sim-lib-lang-prolog/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-prolog/src/: card.rs  conformance.rs  conformance_all_solutions.rs  exports.rs  generated_coverage.rs  lib.rs  matrix_row.rs  profile.rs  surface.rs  symbols.rs  tests.rs
crates/sim-lib-lang-ruby/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-ruby/recipes/: book.toml
crates/sim-lib-lang-ruby/src/: conformance.rs  lib.rs  matrix_row.rs  profile.rs  runtime.rs  symbols.rs  tests.rs
crates/sim-lib-lang-scheme/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-scheme/recipes/: book.toml
crates/sim-lib-lang-scheme/src/: card.rs  codec.rs  conformance.rs  forms.rs  lib.rs  lowering.rs  matrix_row.rs  profile.rs  reader.rs  symbols.rs  tests.rs
crates/sim-lib-lang-typed-lazy/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-lang-typed-lazy/recipes/: book.toml
crates/sim-lib-lang-typed-lazy/src/: conformance.rs  lib.rs  matrix_row.rs  profile.rs  runtime.rs  symbols.rs  tests.rs
crates/sim-lib-logic/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-logic/recipes/: book.toml
crates/sim-lib-logic/src/: all_solutions.rs  arith.rs  builtins.rs  capabilities.rs  clause.rs  codec.rs  constraints.rs  cut.rs  db.rs  env.rs  error.rs  lib.rs  lisp.rs  lisp_runtime.rs  lists.rs  model.rs  naf.rs  policy.rs  query.rs  shapes.rs  stream.rs  tests.rs  unify.rs
crates/sim-lib-mutation/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-mutation/recipes/: book.toml
crates/sim-lib-mutation/src/: cap.rs  cell.rs  claims.rs  lib.rs  runtime_key.rs  runtime_table.rs  table.rs  tests.rs  vector.rs
crates/sim-lib-namespace/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-namespace/recipes/: book.toml
crates/sim-lib-namespace/src/: claims.rs  lib.rs  namespace.rs  tests.rs
crates/sim-lib-pattern/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pattern/recipes/: book.toml
crates/sim-lib-pattern/src/: adt.rs  (+12 more)
crates/sim-lib-sequence/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-standard-core/: BROCHURE.md  Cargo.toml  README.md
xtask/: Cargo.toml  README.md
xtask/src/: check_local_sources.rs  file_sizes.rs  lib.rs  main.rs  shared_tooling.rs
(+207 files in other folders)
