[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Repository maintenance tasks for sim-runtime."
readme = "README.md"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
