[package]
name = "sim-lib-control"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib control."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { version = "0.1.0", path = "../sim-lib-core" }

[lints]
workspace = true
