[package]
name = "sim-lib-core"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib core."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-shape = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-codec-lisp = { version = "0.1.0" }
sim-test-support = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
