[package]
name = "sim-lib-dispatch"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Generic function and method dispatch organs for SIM runtime values."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-shape = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
