[package]
name = "sim-lib-exec"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Capability-gated bounded process execution for SIM."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
