[package]
name = "sim-lib-lang-julia"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib lang julia."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-dispatch = { version = "0.1.0", path = "../sim-lib-dispatch" }
sim-lib-standard-core = { version = "0.1.0", path = "../sim-lib-standard-core" }

[dev-dependencies]
sim-shape = { version = "0.1.0" }
