[package]
name = "sim-lib-lang-julia"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Julia-style surface profile for the SIM expression runtime."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-dispatch = { version = "0.1.0", path = "../sim-lib-dispatch" }
sim-lib-standard-core = { version = "0.1.2", path = "../sim-lib-standard-core" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-shape = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
