[package]
name = "sim-lib-lang-lua"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Lua-style surface profile for the SIM expression runtime."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-control = { version = "0.1.0", path = "../sim-lib-control" }
sim-lib-mutation = { version = "0.1.0", path = "../sim-lib-mutation" }
sim-lib-standard-core = { version = "0.1.0", path = "../sim-lib-standard-core" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
