[package]
name = "sim-lib-lang-scheme"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib lang scheme."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-binding = { version = "0.1.0", path = "../sim-lib-binding" }
sim-lib-control = { version = "0.1.0", path = "../sim-lib-control" }
sim-lib-pattern = { version = "0.1.0", path = "../sim-lib-pattern" }
sim-lib-sequence = { version = "0.1.0", path = "../sim-lib-sequence" }
sim-lib-standard-core = { version = "0.1.0", path = "../sim-lib-standard-core" }
sim-shape = { version = "0.1.0" }

[lints]
workspace = true

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
