[package]
name = "sim-lib-mutation"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib mutation."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-lib-sequence = { version = "0.1.0", path = "../sim-lib-sequence" }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
