[package]
name = "sim-lib-namespace"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Namespace registration and symbol lookup support for SIM libraries."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-runtime"
homepage = "https://github.com/sim-nest/sim-runtime"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
